force-app/main/default/objects/refedge__Referenceability__c/fields/refedge__Comment__c.field-meta.xml
<CustomField>
    <fullName>refedge__Comment__c</fullName>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>