force-app/main/default/objects/refedge__Referenceability__c/fields/refedge__Contact__c.field-meta.xml
<CustomField>
    <fullName>refedge__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.refedge__Account__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referenceability</relationshipLabel>
    <relationshipName>Referenceabilities</relationshipName>
    <type>Lookup</type>
</CustomField>