force-app/main/default/objects/refedge__Referenceability__c/fields/refedge__Status__c.field-meta.xml
<CustomField>
    <fullName>refedge__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Declined: Unknown reason</fullName>
            </value>
            <value>
                <fullName>Declined: Company policy</fullName>
            </value>
            <value>
                <fullName>Declined: Not implemented yet</fullName>
            </value>
            <value>
                <fullName>Declined: Support issue</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>