force-app/main/default/objects/refedge__Referenceability__c/fields/refedge__Verified__c.field-meta.xml
<CustomField>
    <fullName>refedge__Verified__c</fullName>
    <defaultValue>today()</defaultValue>
    <description>The date that an Approve or Decline was obtained</description>
    <inlineHelpText>Enter the date that the Approve or Decline was obtained</inlineHelpText>
    <label>Verified</label>
    <required>true</required>
    <type>Date</type>
</CustomField>